--- a/crud_angular_material/src/app/register/register.component.html
+++ b/crud_angular_material/src/app/register/register.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxLayout="column" fxFlex="35em">
         <form #registerfrm="ngForm" (ngSubmit)="createClient()">
-            <mat-card class="mb-20">
+            <mat-card class="mb-20" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        Cadastro de Clientes
+                        Cadastro de clientes
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
