--- a/crud_angular_material/src/app/consult/consult.component.html
+++ b/crud_angular_material/src/app/consult/consult.component.html
@@ -1,15 +1,28 @@
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxLayout="column" fxFlex="35em">
-        <form class="mt-60" #searchfrm="ngForm">
-            <mat-card class="mb-20">
+        <form class="mt-20" #searchfrm="ngForm">
+            <mat-card class="mb-20" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        Consulta de Clientes
+                        Consulta de clientes
                     </mat-card-title>
                 </mat-card-header>
-                <mat-card-content>
-
+                <mat-card-content class="mt-20">
+                    <div fxLayout="row">
+                        <div fxLayout="column" fxFlex="31.25em">
+                            <mat-form-field>
+                                <mat-label>Nome: </mat-label>
+                                <input matInput>
+                            </mat-form-field>
+                        </div>
+                    </div>
                 </mat-card-content>
+                <mat-card-actions>
+                    <button type="submit" mat-raised-button color="primary" class="ml-5">
+                        <mat-icon>search</mat-icon>
+                        Pesquisar
+                    </button>
+                </mat-card-actions>
             </mat-card>
         </form>
     </div>
